--- a/examples/decorator_examples.ipynb
+++ b/examples/decorator_examples.ipynb
@@ -2,56 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from miniai import ai\n",
     "\n",
-    "# Set your API key using the helper function\n",
-    "# ai.set_api_key(\"openai\", \"your-api-key-here\")\n",
+    "# Set your API key using using environment variables\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = \"your-api-key-here\"\n",
     "\n",
-    "# Or set it using environment variables\n",
-    "# os.environ[\"OPENAI_API_KEY\"] = \"your-api-key-here\""
+    "# Or do it programmatically using the helper function\n",
+    "# ai.set_api_key(\"openai\", \"your-api-key-here\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple Example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Poem: Upon the boughs which summer once adorned,  \n",
-      "Now hangs a tapestry of golden hue,  \n",
-      "Where autumn's breath, with gentle grace, has dawned,  \n",
-      "And draped the earth in robes of th' year anew.  \n",
-      "\n",
-      "Lo, see the leaves their vibrant dance begin,  \n",
-      "In whispered swirls they free themselves to flight.  \n",
-      "The zephyrs guide them softly, where they spin,  \n",
-      "As sunlight weaves through branches, warm and bright.  \n",
-      "\n",
-      "Rich russet, amber, crimson shades delight,  \n",
-      "In splendor 'neath the waning daylight's reign.  \n",
-      "A fleeting crown, they glimmer in their plight,  \n",
-      "To weave a carpet o'er the dying plain.  \n",
-      "\n",
-      "Yet 'tis their fate, this brief, resplendent show,  \n",
-      "To teach that beauty lies in letting go.  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert any function into an AI function\n",
+    "# Same capabilities as ai.ask(), but neater code\n",
     "@ai.function\n",
     "def generate_poem(topic, style):\n",
-    "    \"\"\"Generate a poem about {topic} in the style of {style}.\"\"\"\n",
-    "\n",
-    "poem = generate_poem(\"autumn leaves\", \"Shakespeare\")\n",
-    "print(f\"Poem: {poem}\")"
+    "    \"\"\"Generate a poem about {topic} in the style of {style}.\"\"\""
    ]
   },
   {
@@ -63,36 +44,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ad: 🌿 Drive the Future with EcoVibe Electric! 🌿\n",
+      "Crimson whispers fall,  \n",
+      "Dancing through crisp, chill-kissed air—  \n",
+      "Earth's quilt softly laid. \n",
       "\n",
-      "Dear Environmentally Conscious Families,\n",
       "\n",
-      "Imagine a world where every journey contributes to a cleaner planet. With EcoVibe Electric, that world is just a drive away! Our state-of-the-art electric vehicles blend cutting-edge technology with unparalleled eco-friendliness, making them the perfect choice for families committed to sustainability.\n",
+      "In the park, the leaves fall down,  \n",
+      "Spinning softly, without a sound.  \n",
+      "Red and yellow, orange and gold,  \n",
+      "Tales of autumn they unfold.  \n",
       "\n",
-      "🔋 **Key Features:**\n",
-      "- **Zero Emissions:** Safeguard the planet for your children’s future.\n",
-      "- **Long Range:** Travel up to 300 miles on a single charge—perfect for family adventures!\n",
-      "- **Spacious Comfort:** Roomy interiors designed for growing families and all their gear.\n",
-      "- **Safety First:** Advanced safety features to protect what matters most.\n",
+      "Whirling, twirling, in the breeze,  \n",
+      "Dancing down from all the trees.  \n",
+      "Gentle carpets on the ground,  \n",
+      "Nature's magic all around.  \n",
       "\n",
-      "Join the revolution and empower your family to make a real difference. With EcoVibe, you’re not just buying a car; you’re investing in a healthier, greener world for your family.\n",
+      "Squirrels scamper, collecting treats,  \n",
+      "Crunchy leaves beneath small feet.  \n",
+      "Pumpkins smile with a friendly glow,  \n",
+      "As crisp winds begin to blow.  \n",
       "\n",
-      "🌲 **Test Drive Today and Save the Planet for Tomorrow!**\n",
-      "\n",
-      "EcoVibe Electric - Drive Change, Drive Green. 🌿\n",
-      "\n",
-      "Visit us at EcoVibe.com or call 1-800-ECO-DRIVE to learn more!\n"
+      "The world is warm in autumn's hues,  \n",
+      "A cozy time, with lovely views.  \n",
+      "So join the leaves in joyful play,  \n",
+      "And cherish every fall-filled day!  \n"
      ]
     }
    ],
    "source": [
-    "# With system prompt\n",
-    "@ai.function(system_prompt=\"You are a professional copywriter.\")\n",
-    "def write_ad(product, audience):\n",
-    "    \"\"\"Write a short compelling advertisement for {product} targeting {audience}.\"\"\"\n",
+    "# Later in your code, call the function as you would any other function\n",
+    "user_input = \"autumn leaves\"\n",
+    "style = \"haiku\"\n",
+    "poem = generate_poem(user_input, style)\n",
+    "print(poem, \"\\n\\n\")\n",
     "\n",
-    "ad = write_ad(\"electric car\", \"environmentally conscious families\")\n",
-    "print(f\"Ad: {ad}\")"
+    "another_style = \"nursery rhyme\"\n",
+    "poem = generate_poem(user_input, another_style)\n",
+    "print(poem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example with more control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# You can pass any arguments to the decorator\n",
+    "@ai.function(model=\"gpt-4o-mini\", system_prompt=\"\"\"\n",
+    "You are a senior Python developer conducting code reviews.\n",
+    "Focus on:\n",
+    "1. Performance issues\n",
+    "2. Security vulnerabilities \n",
+    "3. Pythonic patterns\n",
+    "4. Type safety\n",
+    "Be concise and specific. Format each issue as '- Issue: <description>'\n",
+    "\"\"\")\n",
+    "def review_code(code: str, context: str = \"\"):\n",
+    "    \"\"\"\n",
+    "    Review this Python code for best practices and potential issues:\n",
+    "    \n",
+    "    Context: {context}\n",
+    "    \n",
+    "    Code:\n",
+    "    {code}\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Issue: **Performance issues**: Using `range(len(items))` is inefficient; consider iterating directly over `items` instead to avoid indexing overhead and improve readability.\n",
+      "\n",
+      "- Issue: **Pythonic patterns**: The use of a for loop with `append` can be replaced with a list comprehension for better readability and conciseness: `result = [item.strip().lower() for item in items]`.\n",
+      "\n",
+      "- Issue: **Type safety**: The function does not enforce type checking on the input `items`. Consider adding type hints (e.g., `def process_data(items: list[str]) -> list[str]:`) and validating the type of `items` to ensure it contains strings.\n",
+      "\n",
+      "- Issue: **Security vulnerabilities**: If any item in the input list is not a string, the `.strip()` and `.lower()` methods will raise an exception. Implement input validation to handle or filter non-string items gracefully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "code = \"\"\"\n",
+    "def process_data(items):\n",
+    "    result = []\n",
+    "    for i in range(len(items)):\n",
+    "        result.append(items[i].strip().lower())\n",
+    "    return result\n",
+    "\"\"\"\n",
+    "\n",
+    "review = review_code(code, context=\"Used in data preprocessing pipeline\")\n",
+    "print(review)"
    ]
   },
   {
